--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,29 +2,11 @@ spring.application.name=TransactionProwider
 
 server.port=${REST_SERVER_PORT}
 
-# Server configuration
+kafka.bootstrap-servers=${kafka_bootstrap-server}
 
-# PostgreSQL configuration for reactive stack
 spring.r2dbc.url=r2dbc:postgresql://localhost:5423/banksimulator
 spring.r2dbc.username=shtoiko
 spring.r2dbc.password=1123
-
-# Hibernate properties are not needed for R2DBC
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.open-in-view=false
-# spring.jpa.show-sql=true
-# spring.jpa.database=POSTGRESQL
-# spring.jpa.generate-ddl=true
-
-# MongoDB configuration for reactive stack
-#spring.data.mongodb.uri=mongodb://shtoiko:1123@localhost:27017/bs
-# spring.data.mongodb.host=localhost
-# spring.data.mongodb.port=27017
-# spring.data.mongodb.database=bs
-# spring.data.mongodb.authentication-database=admin
-# spring.data.mongodb.username=shtoiko
-# spring.data.mongodb.password=1123
 
 spring.data.mongodb.host=${DB_MONGO_HOST}
 spring.data.mongodb.port=${DB_MONGO_PORT}
@@ -33,49 +15,5 @@ spring.data.mongodb.authentication-database=${DB_MONGO_AUTH}
 spring.data.mongodb.username=${DB_MONGO_USERNAME}
 spring.data.mongodb.password=${DB_MONGO_PASSWORD}
 
-# Jackson properties (optional)
-# spring.jackson.serialization.write-dates-as-timestamps=false
-# spring.jackson.serialization.write-date-timestamps-as-nanoseconds=false
-
-# Logging configuration
-# logging.level.org.springframework.transaction.interceptor=TRACE
-
-# Debugging configuration
-# debug=true
-
-
-
-
-
-
-
-
-
-
-
-
-transactionStakProwider.updatetime=1000
-transactionWorker.interruptionTime=100
 conversion.updatetime=1000000
 conversionservice.exchangeRateURL=https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?json
-#
-#
-#spring.sql.init.platform=postgres
-#spring.datasource.url=r2dbc:postgresql://localhost:5423/banksimulator
-#spring.datasource.username=shtoiko
-#spring.datasource.password=1123
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-#
-#
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=bs
-#
-#spring.data.mongodb.authentication-database=admin
-#spring.data.mongodb.username=shtoiko
-#spring.data.mongodb.password=1123
-#
-#spring.jpa.show-sql=true
-#
-#spring.jpa.database=POSTGRESQL
-#spring.jpa.generate-ddl=true
