Implemented WithdrawResponse to InfrastructureService through Kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=${REST_SERVER_PORT}
 
 kafka.bootstrap-servers=${kafka_bootstrap-server}
 
+transactionservice.deafultbankserviceaccountnumber=4145000000000001
+
 spring.r2dbc.url=r2dbc:postgresql://localhost:5423/banksimulator
 spring.r2dbc.username=shtoiko
 spring.r2dbc.password=1123
