Migrated to Spring Cloud Config Server configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,13 @@
 spring.application.name=TransactionProwider
 
 server.port=${REST_SERVER_PORT}
-
-kafka.bootstrap-servers=${kafka_bootstrap-server}
+kafka.transaction-prowider.group-id=TransactionProviders
+kafka.withdrawal-provider.group-id=WithdrawalProviders
+kafka.transaction.topic=transactions
+kafka.withdrawal.topic=withdrawal_transactions
+kafka.withdraw-result.topic=withdraw_results
 
 transactionservice.deafultbankserviceaccountnumber=4145000000000001
-
-spring.r2dbc.url=r2dbc:postgresql://localhost:5423/banksimulator
-spring.r2dbc.username=shtoiko
-spring.r2dbc.password=1123
-
-spring.data.mongodb.host=${DB_MONGO_HOST}
-spring.data.mongodb.port=${DB_MONGO_PORT}
-spring.data.mongodb.database=${DB_MONGO_DATABASE}
-spring.data.mongodb.authentication-database=${DB_MONGO_AUTH}
-spring.data.mongodb.username=${DB_MONGO_USERNAME}
-spring.data.mongodb.password=${DB_MONGO_PASSWORD}
 
 conversion.updatetime=1000000
 conversionservice.exchangeRateURL=https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?json
